--- a/charts/k8s-rocker/templates/secret.yaml
+++ b/charts/k8s-rocker/templates/secret.yaml
@@ -8,7 +8,7 @@ secrets:
 */}}
 {{- with .Values.secrets }}
 {{- range $name, $secret:= . }}
-{{ include "k8s-rocker.object" (list $ "v1" "Secret" $name $secret)
+{{- include "k8s-rocker.object" (list $ "v1" "Secret" $name $secret)
 }}
 immutable: {{ default false .immutable }}
 stringData:
