--- a/charts/k8s-rocker/templates/hpa.yaml
+++ b/charts/k8s-rocker/templates/hpa.yaml
@@ -11,7 +11,7 @@ deployment:
 */}}
 {{- with .Values.deployment}}
 {{- with .autoscaling }}
-{{- include "k8s-rocker.object" (list $ "autoscaling/v2beta2" "HorizontalPodAutoscaler" (include "k8s-rocker.name" $ ) . ) }}
+{{- include "k8s-rocker.object" (list $ "autoscaling/v2" "HorizontalPodAutoscaler" (include "k8s-rocker.name" $ ) . ) }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
