--- a/charts/k8s-rocker/templates/pvc.yaml
+++ b/charts/k8s-rocker/templates/pvc.yaml
@@ -6,7 +6,7 @@ volumes:
 */}}
 {{- with .Values.volumeClaims }}
 {{- range $name, $volume:= . }}
-{{ include "k8s-rocker.object" (list $ "v1" "PersistentVolumeClaim" $name $volume)
+{{- include "k8s-rocker.object" (list $ "v1" "PersistentVolumeClaim" $name $volume)
 }}
 spec:
   accessModes:
