--- a/charts/k8s-rocker/templates/tests/test.yaml
+++ b/charts/k8s-rocker/templates/tests/test.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: {{ include "k8s-rocker.name" $ }}-test
+  name: "{{ include "k8s-rocker.name" $ }}-test"
   annotations:
     "helm.sh/hook": test
 spec:
