allow to set TLS settings for ingress
fixes #10

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -161,7 +161,7 @@ services:
         port: 80
         target: 80 # defaults to port
         protocol: "tcp"
-        nodePort: 30000 # not set by default, only makes sence for "NodePort" services
+        nodePort: 30000 # not set by default, only makes sense for "NodePort" services
   meta:
     annotations:
       "service": "annotation"
@@ -188,6 +188,7 @@ cronjobs:
 
 ingress:
   "name":
+    tls: 'tls-secret' # optional, if set, creates the tls entries
     meta:
       annotations:
         "ingress": "annotation"
