allow to specify storage class name
closes #9

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -17,6 +17,7 @@ volumeClaims:
         volume: label
     acccessMode: "ReadWriteOnce" # default
     storage: "500Mi"
+    class: "some-class"
 
 secrets:
   "secretName":
