Fix examples and missing doc
* Fix missing doc
* Fix missing example
* Fix whitespace / tab confusion

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -145,6 +145,12 @@ statefulset:
       "statefulset": "annotation"
     labels:
       "statefulset": "label"
+  template:
+    meta:
+      labels:
+        "template": "label"
+      annotations:
+        "template": "annotations"
   replicas: 1
   policy: "OrderedReady"
   strategy: "RollingUpdate"
