allow to specify serviceaccounts for deployments

--- a/charts/k8s-rocker/example.yaml
+++ b/charts/k8s-rocker/example.yaml
@@ -116,6 +116,7 @@ test:
   # podspec as above, used for helm test
 
 deployment:
+  serviceAccount: "someaccount"
   meta:
     labels:
       "deployment": "label"
