--- a/charts/k8s-rocker/templates/deployment.yaml
+++ b/charts/k8s-rocker/templates/deployment.yaml
@@ -17,6 +17,10 @@ deployment:
 {{- include "k8s-rocker.object" (list $ "apps/v1" "Deployment" (include "k8s-rocker.name"  $  ) .)
 }}
 spec:
+  {{- with .serviceAccount }}
+  serviceAccountName: {{ . }}
+  automountServiceAccountToken: true
+  {{- end }}
   selector:
     matchLabels:
     {{- include "k8s-rocker.matchLabels" $ | indent 6}}
